<?xml version="1.0"?>
<package format="2">
  <name>decision_maker</name>
  <version>0.0.0</version>
  <description>The decision_maker package</description>

  <maintainer email="jplaced@unizar.es">julio</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend + build_export_depend + exec_depend -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>orb_slam2_ros</depend>

  <!-- This package depends on Python implementation of sophus library -->


  <!-- python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-numba</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-networkx</exec_depend>

  <!-- pybind11_catkin cannot solve sophuspy dependencies -->
  <!-- <exec_depend>pybind11_catkin</exec_depend> -->

  <!-- These python dependencies are currently unavailable in rosdep-->
  <!-- sophuspy -->
  <!-- sophuspy dependencies shoudld be resolved by:
       sudo apt-get install pybind11-dev
       pip install sophuspy
       -->

  <!-- nptyping -->
  <!-- pip install nptyping -->

  <export>

  </export>
</package>
